--- a/adult.html
+++ b/adult.html
@@ -1,66 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adult Movies - Ageflix</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Adult Movies - Ageflix</title>
+<link rel="stylesheet" href="style.css">
+<style>
+  .movies-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
+    gap: 20px;
+    padding: 50px;
+  }
+
+  .movie-card {
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    cursor: pointer;
+    transition: transform 0.3s, box-shadow 0.3s;
+  }
+
+  .movie-card img {
+    width: 100%;
+    display: block;
+    border-radius: 10px;
+  }
+
+  .movie-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 10px 25px rgba(0,0,0,0.6);
+  }
+
+  .movie-title {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: rgba(0,0,0,0.7);
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    font-weight: 600;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+
+  .movie-card:hover .movie-title {
+    opacity: 1;
+  }
+</style>
 </head>
 <body>
-  <nav class="navbar">
-    <div class="logo">Ageflix</div>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+<nav class="navbar">
+  <div class="logo">Ageflix</div>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 
-  <section class="movies-section">
-    <h1>Adult Movies</h1>
-    <div class="swiper-container">
-      <div class="swiper-wrapper" id="movies-container"></div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-    </div>
-  </section>
+<section class="movies-grid" id="movies-container"></section>
 
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script>
-    const API_KEY = "22cb4298f71c93d5eb897e96b361b632";
+<script>
+const API_KEY = "22cb4298f71c93d5eb897e96b361b632";
 
-    async function fetchMovies() {
-      // جلب أفلام التصنيف 18+ (لكن بدون محتوى مخِل)
-      const res = await fetch(`https://api.themoviedb.org/3/discover/movie?api_key=${API_KEY}&sort_by=popularity.desc&vote_average.gte=5`);
-      const data = await res.json();
-      const container = document.getElementById("movies-container");
+async function fetchMovies() {
+  const res = await fetch(`https://api.themoviedb.org/3/discover/movie?api_key=${API_KEY}&sort_by=popularity.desc`);
+  const data = await res.json();
+  const container = document.getElementById("movies-container");
 
-      data.results.slice(0,30).forEach(movie => {
-        // فلترة افلام مخلة: نستخدم check للadult=false
-        const adult = movie.adult;
-        if(adult) return; // تجاهل الأفلام المخلة
+  data.results.slice(0,30).forEach(movie => {
+    if(movie.adult) return; // تجاهل محتوى مخِل
+    const img = movie.poster_path ? `https://image.tmdb.org/t/p/w500${movie.poster_path}` : "https://via.placeholder.com/300x450?text=No+Image";
 
-        const img = movie.poster_path ? `https://image.tmdb.org/t/p/w500${movie.poster_path}` : "https://via.placeholder.com/300x450?text=No+Image";
-        const div = document.createElement("div");
-        div.classList.add("swiper-slide");
-        div.innerHTML = `
-          <a href="movie.html?id=${movie.id}">
-            <img src="${img}" alt="${movie.title}">
-            <h3>${movie.title}</h3>
-          </a>`;
-        container.appendChild(div);
-      });
+    const div = document.createElement("div");
+    div.classList.add("movie-card");
+    div.innerHTML = `
+      <a href="movie.html?id=${movie.id}">
+        <img src="${img}" alt="${movie.title}">
+        <div class="movie-title">${movie.title}</div>
+      </a>`;
+    container.appendChild(div);
+  });
+}
 
-      new Swiper('.swiper-container', {
-        slidesPerView: 5,
-        spaceBetween: 20,
-        navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
-        breakpoints: {1024:{slidesPerView:5},768:{slidesPerView:3},480:{slidesPerView:2},0:{slidesPerView:1}}
-      });
-    }
-
-    fetchMovies();
-  </script>
+fetchMovies();
+</script>
 </body>
 </html>
