--- a/movie.html
+++ b/movie.html
@@ -6,47 +6,15 @@
 <title>Movie Details - Ageflix</title>
 <link rel="stylesheet" href="style.css">
 <style>
-  .movie-container {
-    max-width: 1000px;
-    margin: 50px auto;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-  }
-
-  .movie-poster {
-    flex: 1 1 300px;
-  }
-
-  .movie-poster img {
-    width: 100%;
-    border-radius: 10px;
-  }
-
-  .movie-info {
-    flex: 2 1 600px;
-  }
-
-  .movie-info h1 {
-    font-size: 36px;
-    margin-bottom: 15px;
-  }
-
-  .movie-info p {
-    font-size: 18px;
-    line-height: 1.6;
-    margin-bottom: 20px;
-  }
-
-  .trailer {
-    margin-top: 30px;
-  }
-
-  .trailer iframe {
-    width: 100%;
-    height: 500px;
-    border-radius: 10px;
-  }
+  .movie-container { max-width:1200px; margin:50px auto; display:flex; flex-wrap:wrap; gap:40px; }
+  .movie-poster img { width:100%; border-radius:12px; }
+  .movie-info { flex:1 1 600px; }
+  .movie-info h1 { font-size:36px; margin-bottom:20px; }
+  .movie-info p { font-size:18px; line-height:1.6; margin-bottom:20px; }
+  .trailer iframe { width:100%; height:500px; border-radius:12px; margin-bottom:30px; }
+  .cast-grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(120px,1fr)); gap:15px; margin-top:20px; }
+  .cast-card img { width:100%; border-radius:50%; }
+  .cast-card p { text-align:center; margin-top:5px; font-size:14px; }
 </style>
 </head>
 <body>
@@ -66,9 +34,9 @@
   <div class="movie-info">
     <h1 id="title">Movie Title</h1>
     <p id="overview">Movie overview will appear here...</p>
-    <div class="trailer" id="trailer">
-      <!-- Trailer iframe -->
-    </div>
+    <div class="trailer" id="trailer"></div>
+    <h2>Cast</h2>
+    <div class="cast-grid" id="cast"></div>
   </div>
 </div>
 
@@ -80,20 +48,27 @@ const movieId = urlParams.get('id');
 async function fetchMovieDetails() {
   const res = await fetch(`https://api.themoviedb.org/3/movie/${movieId}?api_key=${API_KEY}&language=en-US`);
   const data = await res.json();
-
   document.getElementById('poster').src = data.poster_path ? `https://image.tmdb.org/t/p/w500${data.poster_path}` : "https://via.placeholder.com/300x450?text=No+Image";
   document.getElementById('title').innerText = data.title;
   document.getElementById('overview').innerText = data.overview;
 
-  // fetch trailer
+  // Trailer
   const trailerRes = await fetch(`https://api.themoviedb.org/3/movie/${movieId}/videos?api_key=${API_KEY}&language=en-US`);
   const trailerData = await trailerRes.json();
   const trailer = trailerData.results.find(v => v.type === "Trailer" && v.site === "YouTube");
-  if(trailer){
-    document.getElementById('trailer').innerHTML = `<iframe src="https://www.youtube.com/embed/${trailer.key}" frameborder="0" allowfullscreen></iframe>`;
-  } else {
-    document.getElementById('trailer').innerHTML = "<p>Trailer not available</p>";
-  }
+  document.getElementById('trailer').innerHTML = trailer ? `<iframe src="https://www.youtube.com/embed/${trailer.key}" frameborder="0" allowfullscreen></iframe>` : "<p>Trailer not available</p>";
+
+  // Cast
+  const castRes = await fetch(`https://api.themoviedb.org/3/movie/${movieId}/credits?api_key=${API_KEY}`);
+  const castData = await castRes.json();
+  const castContainer = document.getElementById('cast');
+  castData.cast.slice(0,8).forEach(actor => {
+    const div = document.createElement('div');
+    div.classList.add('cast-card');
+    const profile = actor.profile_path ? `https://image.tmdb.org/t/p/w300${actor.profile_path}` : "https://via.placeholder.com/100";
+    div.innerHTML = `<img src="${profile}" alt="${actor.name}"><p>${actor.name}</p>`;
+    castContainer.appendChild(div);
+  });
 }
 
 fetchMovieDetails();
