--- a/index.html
+++ b/index.html
@@ -4,22 +4,196 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ageflix - Home</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    /* ستايل عام */
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #121212;
+      color: #fff;
+    }
+
+    /* نافبار */
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+      background-color: #1c1c1c;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+    }
+
+    .logo span {
+      font-size: 26px;
+      font-weight: bold;
+      color: #e50914;
+      margin-right: 10px;
+    }
+
+    .logo img {
+      height: 40px;
+      border-radius: 5px;
+    }
+
+    /* قائمة */
+    .navbar ul {
+      list-style: none;
+      display: flex;
+      align-items: center;
+    }
+
+    .navbar ul li {
+      position: relative;
+      margin-left: 25px;
+    }
+
+    .navbar ul li a {
+      text-decoration: none;
+      color: #fff;
+      font-weight: bold;
+      padding: 8px 5px;
+      transition: color 0.3s;
+    }
+
+    .navbar ul li a:hover {
+      color: #e50914;
+    }
+
+    /* قائمة فرعية */
+    .navbar ul li ul {
+      display: none;
+      position: absolute;
+      top: 35px;
+      left: 0;
+      background-color: #1c1c1c;
+      padding: 10px;
+      border-radius: 5px;
+      min-width: 100px;
+    }
+
+    .navbar ul li:hover ul {
+      display: block;
+    }
+
+    .navbar ul li ul li {
+      margin: 5px 0;
+    }
+
+    .navbar ul li ul li a {
+      font-weight: normal;
+      color: #fff;
+    }
+
+    /* قسم المشروع */
+    .project-info {
+      background-color: #1c1c1c;
+      padding: 20px;
+      margin: 20px auto;
+      max-width: 700px;
+      border-radius: 10px;
+      text-align: center;
+      font-size: 18px;
+      color: #ddd;
+    }
+
+    .project-info strong {
+      color: #e50914;
+      font-size: 22px;
+    }
+
+    /* قسم الكاميرا */
+    .hero {
+      text-align: center;
+      padding: 50px 20px;
+    }
+
+    #webcam-container, #label-container {
+      margin: 20px auto;
+    }
+
+    #startBtn {
+      margin-top: 20px;
+      padding: 12px 25px;
+      font-size: 18px;
+      background-color: #e50914;
+      border: none;
+      border-radius: 5px;
+      color: white;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    #startBtn:hover {
+      background-color: #b00610;
+    }
+
+    /* استجابة الهاتف */
+    @media (max-width: 768px) {
+      .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .navbar ul {
+        flex-direction: column;
+        width: 100%;
+      }
+      .navbar ul li {
+        margin: 10px 0;
+      }
+      .navbar ul li ul {
+        position: relative;
+        top: 0;
+      }
+    }
+  </style>
 </head>
 <body>
+
   <nav class="navbar">
-    <div class="logo">Ageflix</div>
+    <div class="logo">
+      <span>Ageflix</span>
+      <img src="your-logo.png" alt="Logo"> <!-- ضع رابط الصورة هنا -->
+    </div>
     <ul>
-      <li><a href="about.html">About</a></li>
+      <li>
+        <a href="#">About</a>
+        <ul>
+          <li><a href="kids.html">Kids</a></li>
+          <li><a href="adult.html">Adult</a></li>
+          <li><a href="senior.html">Senior</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="movies.html">Movies</a>
+        <ul>
+          <li><a href="kids.html">Kids</a></li>
+          <li><a href="adult.html">Adult</a></li>
+          <li><a href="senior.html">Senior</a></li>
+        </ul>
+      </li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
+
+  <div class="project-info">
+    <strong>Ageflix</strong> - مشروع يفتح الموقع ويستعمل الكاميرا لتحديد الفئة العمرية ويقترح الأفلام المناسبة لكل مستخدم.
+  </div>
 
   <section class="hero">
     <h1>Welcome to Ageflix</h1>
     <p>Discover movies according to your age group!</p>
     
-    <!-- مكان Teachable Machine -->
     <div id="webcam-container"></div>
     <div id="label-container"></div>
 
@@ -61,7 +235,6 @@
         labelContainer.innerHTML += `<p>${p.className}: ${(p.probability * 100).toFixed(2)}%</p>`;
       });
 
-      // إذا احتمال أكثر من 80% نفتح الصفحة حسب الفئة
       const best = prediction.reduce((a,b) => a.probability > b.probability ? a:b);
       if(best.probability > 0.8){
         if(best.className.toLowerCase() === "kids") window.location.href = "kids.html";
