--- a/indext.html
+++ b/indext.html
@@ -1,34 +1,364 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - Ageflix</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Ageflix - Home</title>
+
+<style>
+  body {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #121212;
+    color: #fff;
+    overflow-x: hidden;
+  }
+
+  /* Background video */
+  .bg-video {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    opacity: 0.25;
+  }
+
+  /* Navbar */
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 20px;
+    background: rgba(20, 20, 20, 0.8);
+    backdrop-filter: blur(10px);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+  }
+
+  .logo-left {
+    font-size: 28px;
+    font-weight: bold;
+    color: #e50914;
+  }
+
+  .navbar ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin: 0;
+  }
+
+  .navbar a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s;
+  }
+
+  .navbar a:hover {
+    color: #e50914;
+  }
+
+  /* Hero */
+  .hero {
+    text-align: center;
+    padding: 100px 20px 50px;
+    animation: fadeIn 2s ease;
+  }
+
+  .hero h1 { font-size: 48px; margin-bottom: 10px; }
+  .hero p { font-size: 20px; color: #ddd; }
+
+  #startBtn {
+    margin-top: 20px;
+    padding: 14px 30px;
+    font-size: 20px;
+    background-color: #e50914;
+    border: none;
+    border-radius: 6px;
+    color: white;
+    cursor: pointer;
+    transition: transform 0.3s;
+    animation: pulse 2s infinite;
+  }
+
+  #startBtn:hover { transform: scale(1.05); }
+
+  /* Webcam cinematic container */
+  #webcam-container {
+    position: relative;
+    display: inline-block;
+    border-radius: 12px;
+    padding: 10px;
+    background: radial-gradient(circle at center, #1b1b1b 30%, #000 100%);
+    box-shadow: 0 0 30px rgba(229,9,20,0.25), inset 0 0 25px rgba(255,255,255,0.05);
+    animation: glowPulse 3s ease-in-out infinite;
+  }
+
+  #webcam-container::after {
+    content: "";
+    position: absolute;
+    top: -3px;
+    left: -3px;
+    right: -3px;
+    bottom: -3px;
+    border-radius: 14px;
+    border: 2px solid rgba(229,9,20,0.4);
+    animation: borderGlow 2.5s ease-in-out infinite;
+  }
+
+  /* glowing animation */
+  @keyframes glowPulse {
+    0% { box-shadow: 0 0 25px rgba(229,9,20,0.2); }
+    50% { box-shadow: 0 0 45px rgba(229,9,20,0.4); }
+    100% { box-shadow: 0 0 25px rgba(229,9,20,0.2); }
+  }
+  @keyframes borderGlow {
+    0% { opacity: 0.3; transform: scale(1); }
+    50% { opacity: 0.7; transform: scale(1.03); }
+    100% { opacity: 0.3; transform: scale(1); }
+  }
+
+  /* Typing effect */
+  .detecting-text {
+    position: absolute;
+    top: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #e50914;
+    font-size: 20px;
+    font-weight: 600;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 2px solid #e50914;
+    width: 0;
+    opacity: 0;
+    animation: typing 3s steps(30, end) infinite, blink 0.8s step-end infinite;
+  }
+
+  @keyframes typing {
+    0% { width: 0; opacity: 1; }
+    50% { width: 260px; }
+    100% { width: 0; }
+  }
+
+  @keyframes blink {
+    50% { border-color: transparent; }
+  }
+
+  /* Modal */
+  .modal {
+    display: none;
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.8);
+    justify-content: center;
+    align-items: center;
+    z-index: 2000;
+  }
+
+  .modal-content {
+    background: #1c1c1c;
+    padding: 30px;
+    border-radius: 12px;
+    text-align: center;
+    width: 320px;
+    position: relative;
+    box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    animation: popIn 0.5s ease;
+  }
+
+  .modal-content h2 { color: #e50914; }
+  .modal-content p { color: #ccc; }
+
+  .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 20px;
+    cursor: pointer;
+    color: #fff;
+  }
+
+  .close-btn:hover { color: #e50914; }
+
+  footer {
+    text-align: center;
+    padding: 20px;
+    color: #777;
+    font-size: 14px;
+    background-color: #1a1a1a;
+  }
+
+  @keyframes popIn {
+    from { transform: scale(0.8); opacity: 0; }
+    to { transform: scale(1); opacity: 1; }
+  }
+
+  @keyframes pulse {
+    0% { box-shadow: 0 0 0 0 rgba(229,9,20, 0.4); }
+    70% { box-shadow: 0 0 0 15px rgba(229,9,20, 0); }
+    100% { box-shadow: 0 0 0 0 rgba(229,9,20, 0); }
+  }
+</style>
 </head>
 <body>
-  <nav class="navbar">
-    <div class="logo">Ageflix</div>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html" class="active">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
 
-  <section class="about-section">
-    <h1>About Ageflix</h1>
-    <p>
-      Ageflix is an AI-powered movie platform that uses Teachable Machine technology to
-      detect your age group and recommend movies tailored to you.
-    </p>
+<video autoplay muted loop class="bg-video">
+  <source src="videos/background.mp4" type="video/mp4">
+</video>
 
-    <div class="video-container">
-      <video controls width="600" poster="https://i.imgur.com/mN5OiyV.jpeg">
-        <source src="https://samplelib.com/lib/preview/mp4/sample-5s.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
-  </section>
+<nav class="navbar">
+  <div class="logo-left">Ageflix</div>
+  <ul>
+    <li><a href="about.html">About</a></li>
+    <li><a href="movies.html">Movies</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
+<section class="hero">
+  <h1>Welcome to Ageflix</h1>
+  <p>Discover movies tailored to your age group</p>
+
+  <div id="webcam-wrapper" style="position: relative; display: inline-block;">
+    <div class="detecting-text" id="detectingText">🔍 Detecting your age group...</div>
+    <div id="webcam-container"></div>
+  </div>
+
+  <div id="label-container"></div>
+  <button id="startBtn">🎥 Start Detection</button>
+</section>
+
+<div class="modal" id="ageModal">
+  <div class="modal-content">
+    <span class="close-btn" id="closeModal">✖</span>
+    <h2 id="ageTitle">Age Group Detected</h2>
+    <p id="ageMessage">We will suggest movies suitable for you.</p>
+  </div>
+</div>
+
+<footer>
+  © 2025 Ageflix — Made with ❤️ for movie lovers.
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image"></script>
+
+<script>
+// === 🎵 Background hum (AI sound) ===
+let humCtx, humOsc, humGain;
+function startHum() {
+  humCtx = new (window.AudioContext || window.webkitAudioContext)();
+  humOsc = humCtx.createOscillator();
+  humGain = humCtx.createGain();
+  humOsc.type = "sine";
+  humOsc.frequency.setValueAtTime(180, humCtx.currentTime);
+  humGain.gain.setValueAtTime(0.05, humCtx.currentTime);
+  humOsc.connect(humGain);
+  humGain.connect(humCtx.destination);
+  humOsc.start();
+}
+function stopHum() {
+  if (humOsc && humGain) {
+    humGain.gain.exponentialRampToValueAtTime(0.0001, humCtx.currentTime + 0.5);
+    humOsc.stop(humCtx.currentTime + 0.6);
+  }
+}
+
+// === 🎵 Smart beep for each age group ===
+function playBeep(ageGroup) {
+  const ctx = new (window.AudioContext || window.webkitAudioContext)();
+  const osc = ctx.createOscillator();
+  const gain = ctx.createGain();
+
+  let frequency = 880;
+  let duration = 0.25;
+
+  if (ageGroup.toLowerCase().includes("kids")) {
+    frequency = 1200; duration = 0.2;
+  } else if (ageGroup.toLowerCase().includes("adult")) {
+    frequency = 800; duration = 0.3;
+  } else if (ageGroup.toLowerCase().includes("senior")) {
+    frequency = 500; duration = 0.4;
+  }
+
+  osc.type = "sine";
+  osc.frequency.setValueAtTime(frequency, ctx.currentTime);
+  gain.gain.setValueAtTime(0.25, ctx.currentTime);
+  osc.connect(gain);
+  gain.connect(ctx.destination);
+  osc.start();
+  osc.stop(ctx.currentTime + duration);
+}
+
+// === Teachable Machine setup ===
+const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
+let model, webcam, maxPredictions, detectedGroup = "";
+
+async function init() {
+  const modelURL = URL + "model.json";
+  const metadataURL = URL + "metadata.json";
+  model = await tmImage.load(modelURL, metadataURL);
+  maxPredictions = model.getTotalClasses();
+
+  webcam = new tmImage.Webcam(400, 300, true);
+  await webcam.setup();
+  await webcam.play();
+  document.getElementById("webcam-container").appendChild(webcam.canvas);
+
+  startHum();
+  document.getElementById("detectingText").style.opacity = "1";
+  document.getElementById("detectingText").style.animationPlayState = "running";
+
+  window.requestAnimationFrame(loop);
+}
+
+async function loop() {
+  webcam.update();
+  await predict();
+  window.requestAnimationFrame(loop);
+}
+
+async function predict() {
+  const prediction = await model.predict(webcam.canvas);
+  const best = prediction.reduce((a,b)=>a.probability > b.probability ? a:b);
+
+  if (best.probability > 0.85 && detectedGroup !== best.className) {
+    detectedGroup = best.className;
+
+    // Stop hum and play beep for detected group
+    stopHum();
+    playBeep(best.className);
+
+    const textEl = document.getElementById("detectingText");
+    textEl.innerText = "✅ Age group detected!";
+    textEl.style.animation = "none";
+    textEl.style.border = "none";
+
+    showModal(best.className);
+  }
+}
+
+function showModal(ageGroup) {
+  const modal = document.getElementById("ageModal");
+  document.getElementById("ageTitle").innerText = `Detected Age Group: ${ageGroup}`;
+  modal.style.display = "flex";
+
+  document.getElementById("closeModal").onclick = () => {
+    modal.style.display = "none";
+    if(ageGroup.toLowerCase() === "kids") window.location.href = "kids.html";
+    if(ageGroup.toLowerCase() === "adult") window.location.href = "adult.html";
+    if(ageGroup.toLowerCase() === "senior") window.location.href = "senior.html";
+  };
+}
+
+document.getElementById("startBtn").addEventListener("click", init);
+</script>
+
 </body>
 </html>
